--- a/lib2024/qa/index.html
+++ b/lib2024/qa/index.html
@@ -1,166 +1,247 @@
 <!DOCTYPE html>
 <html >
-<head>
-	<meta charset="utf-8">
-	<title>LIB2024 - QA</title>
-</head>
-<body>
-	<h1>LIB2024- QA</h1>
-	<!-- Qus/Ans list begins -->
-	<ol>
-		<!-- Qus 1 -->
-		<li>
-			<p>
-				<strong>Qus: </strong>
-				What are the three components of Web?
-			</p>
-			<p>
-				<strong>Ans: </strong>
-				The three components of Web are comprised of HTML (Hyper Text Markup Language), CSS (Cascading Style Sheets), and JavaScript.
-			</p>
-		</li>
-		<!-- Qus 2 -->
-		<li>
-			<p>
-				<strong>Qus:</strong>
-				Define version control and give one example.
-			</p>
-			<p>
-				<strong>Ans:</strong>
-				Version control is the ability to track and manage changes done to software code. Version control systems such as GitHub are software tools that assist users and their teams to manage changes to source code over time. 
-			</p>
-		</li>
-		<!-- Qus 3 -->
-		<li>
-			<p>
-				<strong>Qus: </strong>
-				What tag is used to create the title of a web page? Give an example.
-			</p>
-			<p>
-				<strong>Ans: </strong>
-				The &lt;title&gt; tag is used to create the title of a webpage.
-				This is an example. <a href="https://algonquincollege.com" title="Algonquin College">Algonquin College</a> 
-			</p>
-		</li>
-		<!-- Qus 4 -->
-		<li>
-			<p>
-				<strong>Qus: </strong>
-				 What tag is used to create a paragraph in html? Give an example
-			</p>
-			<p>
-				<strong>Ans: </strong>
-				The &lt;p&gt; tag is used to create a paragraph in html. 
-			<p> This is an example of &lt;p&gt; being used to create a paragraph. 
-			</p>
-		</li>
-		<!-- Qus 5 -->
-		<li>
-			<p>
-				<strong>Qus: </strong>
-				 Identify the odd one from these tags: &lt;span&gt;, &lt;p&gt;, &lt;a&gt;, &lt;i&gt;  and state the reason?
-			</p>
-			<p>
-				<strong>Ans: </strong>
-				The &lt;span&gt; tag is the odd one out because the other tags are used to define elements.
-			</p>
-		</li>
-		<!-- Qus 6 -->
-		<li>
-			<p>
-				<strong>Qus: </strong>
-				What are the tags required to create a navigation list in HTML? 
-			</p>
-			<p>
-				<strong>Ans: </strong>
-				The tags required to create a navigation list in HTML are &lt;nav&gt;, &lt;ul&gt; and &lt;li&gt;.
-			</p>
-		</li>
-			<!--Qus 7 -->
-		<li>
-			<p>
-				<strong>Qus: </strong>
-				What element is used to create images? Name its attributes.  
-			</p>
-			<p>
-				<strong>Ans: </strong>
-				The &lt;img&gt; element is used to create images. Its attributes are alt, cross origin, height, ismap, loading, longdesc, referrerpolicy, sizes, src, srcset, usemap, and width. 
-			</p>
-		</li>
-			<!-- Qus 8 -->
-		<li>
-			<p>
-				<strong>Qus: </strong>
-				 Identify the odd one from these tags: &lt;table&gt;, &lt;tr&gt;, &lt;b&gt;, &lt;td&gt;  and state the reason.
-			</p>
-			<p>
-				<strong>Ans: </strong>
-				The &lt;b&gt; tag is the ode one out. The other tags are relevant to creating a table.
-			</p>
-		</li>
-			<!-- Qus 9 -->
-		<li>
-			<p>
-				<strong>Qus: </strong>
-				Give an example of color picker input. 
-			</p>
-			<p>
-				<strong>Ans: </strong>
-				An example would be &lt;input type="color"&gt;. This would give you the default value of #00000 or black, unless you add a value. An example would be <input type="color" value="#ff99ff">
-			</p>
-		</li>
-			<!--Qus 10 -->
-		<li>
-			<p>
-				<strong>Qus: </strong>
-				What is the use of name and value attributes? Give two examples 
-			</p>
-			<p>
-				<strong>Ans: </strong>
-				The use of the of the name attribute specifies a name for an HTML element.
-				This is an example of the name attribute
-				<button name="subject" type="submit" value="HTML">HTML</button>
-				The value attribute can be used to specify the value of the element. 
-				This is an example <input value = "100">
-			</p>
-		</li>
-			<!--Qus 11 -->
-		<li>
-			<p>
-				<strong>Qus: </strong>
-				Give an example of inline style
-			</p>
-			<p>
-				<strong>Ans: </strong>
-				<p style="color:magenta;">This is an example of inline style.</p>
-			</p>
-		</li>
-			<!--Qus 12 -->
-		<li>
-			<p>
-				<strong>Qus: </strong>
-				How would you link an external style sheet? Give example.
-			</p>
-			<p>
-				<strong>Ans: </strong>
-				You like an external style sheet by using &lt; link &gt; to link an external CSS file. You can add a link to the &lt; head &gt; section.
-			<div>Here is an example : &lt; link rel="stylesheet" href="styles.css"/&gt;</div>
-			</p>
-		</li>
-		<li>
-			<p>
-				<strong>Qus: </strong>
-				Create CSS block to center an element both horizontally and vertically that has position:absolute and has width:200px and height:200px. 
-			</p>
-			<p>
-				<strong>Ans: </strong>
-				<center style="width: 50px; height: 50px; position: absolute; border: solid 3px;
-				padding: 100px;">This is a centered element</center>
-		</li>
-		
-
-
-
-  </ol>
-</body>
-</html>
+	<head>
+		<meta charset="utf-8">
+		<title>LIB2024 - QA</title>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	</head>
+	<body>
+		<h1>LIB2024- QA</h1>
+		<!-- Qus/Ans list begins -->
+		<ol>
+			<!-- Qus 1 -->
+			<li>
+				<p>
+					<strong>Qus: </strong>
+					What are the three components of Web?
+				</p>
+				<p>
+					<strong>Ans: </strong>
+					The three components of Web are comprised of HTML (Hyper Text Markup Language), CSS (Cascading Style Sheets), and JavaScript.
+				</p>
+			</li>
+			<!-- Qus 2 -->
+			<li>
+				<p>
+					<strong>Qus:</strong>
+					Define version control and give one example.
+				</p>
+				<p>
+					<strong>Ans:</strong>
+					Version control is the ability to track and manage changes done to software code. Version control systems such as GitHub are software tools that assist users and their teams to manage changes to source code over time.
+				</p>
+			</li>
+			<!-- Qus 3 -->
+			<li>
+				<p>
+					<strong>Qus: </strong>
+					What tag is used to create the title of a web page? Give an example.
+				</p>
+				<p>
+					<strong>Ans: </strong>
+					The &lt;title&gt; tag is used to create the title of a webpage.
+					This is an example. <a href="https://algonquincollege.com" title="Algonquin College">Algonquin College</a>
+				</p>
+			</li>
+			<!-- Qus 4 -->
+			<li>
+				<p>
+					<strong>Qus: </strong>
+					What tag is used to create a paragraph in html? Give an example
+				</p>
+				<p>
+					<strong>Ans: </strong>
+					The &lt;p&gt; tag is used to create a paragraph in html.
+					<p> This is an example of &lt;p&gt; being used to create a paragraph.
+					</p>
+				</li>
+				<!-- Qus 5 -->
+				<li>
+					<p>
+						<strong>Qus: </strong>
+						Identify the odd one from these tags: &lt;span&gt;, &lt;p&gt;, &lt;a&gt;, &lt;i&gt;  and state the reason?
+					</p>
+					<p>
+						<strong>Ans: </strong>
+						The &lt;span&gt; tag is the odd one out because the other tags are used to define elements.
+					</p>
+				</li>
+				<!-- Qus 6 -->
+				<li>
+					<p>
+						<strong>Qus: </strong>
+						What are the tags required to create a navigation list in HTML?
+					</p>
+					<p>
+						<strong>Ans: </strong>
+						The tags required to create a navigation list in HTML are &lt;nav&gt;, &lt;ul&gt; and &lt;li&gt;.
+					</p>
+				</li>
+				<!--Qus 7 -->
+				<li>
+					<p>
+						<strong>Qus: </strong>
+						What element is used to create images? Name its attributes.
+					</p>
+					<p>
+						<strong>Ans: </strong>
+						The &lt;img&gt; element is used to create images. Its attributes are alt, cross origin, height, ismap, loading, longdesc, referrerpolicy, sizes, src, srcset, usemap, and width.
+					</p>
+				</li>
+				<!-- Qus 8 -->
+				<li>
+					<p>
+						<strong>Qus: </strong>
+						Identify the odd one from these tags: &lt;table&gt;, &lt;tr&gt;, &lt;b&gt;, &lt;td&gt;  and state the reason.
+					</p>
+					<p>
+						<strong>Ans: </strong>
+						The &lt;b&gt; tag is the ode one out. The other tags are relevant to creating a table.
+					</p>
+				</li>
+				<!-- Qus 9 -->
+				<li>
+					<p>
+						<strong>Qus: </strong>
+						Give an example of color picker input.
+					</p>
+					<p>
+						<strong>Ans: </strong>
+						An example would be &lt;input type="color"&gt;. This would give you the default value of #00000 or black, unless you add a value. An example would be <input type="color" value="#ff99ff">
+					</p>
+				</li>
+				<!--Qus 10 -->
+				<li>
+					<p>
+						<strong>Qus: </strong>
+						What is the use of name and value attributes? Give two examples
+					</p>
+					<p>
+						<strong>Ans: </strong>
+						The use of the of the name attribute specifies a name for an HTML element.
+						This is an example of the name attribute
+						<button name="subject" type="submit" value="HTML">HTML</button>
+						The value attribute can be used to specify the value of the element.
+						This is an example <input value = "100">
+					</p>
+				</li>
+				<!--Qus 11 -->
+				<li>
+					<p>
+						<strong>Qus: </strong>
+						Give an example of inline style
+					</p>
+					<p>
+						<strong>Ans: </strong>
+						<p style="color:magenta;">This is an example of inline style.</p>
+					</p>
+				</li>
+				<!--Qus 12 -->
+				<li>
+					<p>
+						<strong>Qus: </strong>
+						How would you link an external style sheet? Give example.
+					</p>
+					<p>
+						<strong>Ans: </strong>
+						You like an external style sheet by using &lt; link &gt; to link an external CSS file. You can add a link to the &lt; head &gt; section.
+						<br>Here is an example : &lt; link rel="stylesheet" href="css/style.css"/&gt;</br>
+					</p>
+				</li>
+				<li>
+					<p>
+						<strong>Qus: </strong>
+						Create CSS block to center an element both horizontally and vertically that has position:absolute and has width:200px and height:200px.
+					</p>
+					<p>
+						<strong>Ans: </strong>
+						<center style="width: 50px; height: 50px; position: relative; border: solid 3px;
+						padding: 100px;">This is a centered element</center>
+					</li>
+					
+					<li>
+						<p>
+							<strong>Qus: </strong>
+							Create CSS keyframes block called "spin" that rotates an element.
+						</p>
+						<p>
+							<strong>Ans: </strong>
+							<div class="block"></div>
+							<style>
+							.block {
+							border: 10px solid #45ffd0;
+							border-radius: 10%;
+							width: 100px;
+							height: 100px;
+							animation: spin 2s linear infinite;
+							}
+							@keyframes spin {
+							0% { transform: rotate(0deg); }
+							100% { transform: rotate(360deg); }
+							}
+							</style>
+						</p>
+					</li>
+					<li>
+						<p>
+							<strong>Qus: </strong>
+							Create CSS animation block to rotate an element that has the following properties :
+							class "rotate-me"
+							It rotates 5 times at intervals of 0.5s with "linear" transition using animation keyframes "spin".
+						</p>
+						<p>
+							<strong>Ans: </strong>
+							<div class="rotate-me"></div>
+							<style>
+								.rotate-me{
+									border: 10px solid #c573f5;
+									border-radius: 10px;
+									width: 100px;
+									height: 100px;
+									animation:rotation 0.5s linear;
+									animation-iteration-count: 5;
+								}
+								@keyframes rotation{
+									0%, 40% {transform: rotate(0deg);}
+									60%, 100% {transform: rotate(90deg);}
+								}
+							</style>
+						</p>
+					</li>
+					<li>
+						<p>
+							<strong>Qus: </strong>
+							How would you include create an alert with string "I love JavaScript" using JavaScript?
+						</p>
+						<p>
+							<strong>Ans:</strong>
+							To include create an alert with string 'I love JavaScript' I could include it inline using &lt;script type="text/javascript"&gt; alert('I love JavaScript')&lt;/script&gt;. I could also include an external script and use alert('I love Javascript').
+							<script type="text/javascript">
+								alert('I love JavaScript')
+							</script>
+						</p>
+					</li>
+					<li>
+						<p>
+							<strong>Qus: </strong>
+							How would you fade out an element with id "fade-me" after a delay of 300ms using JQuery?
+						</p>
+						<p>
+							<strong>Ans: </strong>
+							In this example I have created a button in HTML to initate the event to fade my element (a div) with the id "fade-me". In JQuery, I have used
+							<br>&lt;script&gt;
+							<br>$("button").click(function(){
+							<br>$("fade-me").fadeOut().delay(300);});.
+							<br>&lt;/script&gt;
+							<br>
+							<button>Click Me</button>
+							<div id="fade-me" style="width: 50px; height: 50px; background-color: purple;"></div><br>
+							<script>
+									$("button").click(function(){
+									$("#fade-me").fadeOut().delay(300);
+									});
+							</script>
+						</ol>
+						<!-- <script src="script.js"></script> -->
+					</body>
+				</html>
