--- a/lib2024/final/index.html
+++ b/lib2024/final/index.html
@@ -1,13 +1,79 @@
 <!DOCTYPE html>
 <html lang="en-ca">
-<head>
-	<title>Final</title>
-	<!-- <link rel="stylesheet" type="text/css" href="styles/style.css"> -->
-</head>
-<body>
-	<header class="site-header clearfix" id="site-header">
-		<h1 class="logo">My Logo</h1>
-		<nav class="main-nav container desktop-nav">
-			<ul class="main-navc clearfix">
-				<li>
-		</nav>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width">
+		<title>Final</title>
+		<!-- <link rel="stylesheet" type="text/css" href="css/style.css"> -->
+	</head>
+	<body>
+		<header class="site-header clearfix" id="site-header">
+			<h1 class="logo">My Logo</h1>
+			<nav class="main-nav container desktop-nav">
+				<ul class="main-nav clearfix">
+					<li>
+						<a href="home.html">Home</a></li>
+						<li>
+							<a href="about.html">About</a></li>
+							<li>
+								<a href="schedule.html">Schedule</a></li>
+								<li>
+									<a href="portfolio.html">Portfolio</a></li>
+									<li>
+										<a href="contact.html">Contact</a></li>
+									</ul>
+								</nav>
+							</header>
+							<main class="main clearfix" id="main">
+								<article class="main-site container">
+									<section id="about">
+										<h1>About</h1>
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae ligula placerat, volutpat odio in, pharetra velit. Praesent gravida gravida diam. Etiam iaculis varius sodales. Mauris justo lorem, tincidunt id arcu eu, semper vehicula sapien. Quisque id nibh ut turpis posuere placerat non nec velit. Fusce laoreet maximus hendrerit. Fusce id fringilla orci.</p>
+										<p>
+										Etiam elementum tortor vitae faucibus scelerisque. Sed non odio at odio pulvinar facilisis. Nullam a neque cursus massa consequat interdum. Praesent ac eros vitae arcu efficitur tincidunt. Aliquam dolor dui, congue vitae placerat a, sodales in mi. Proin feugiat interdum dui in hendrerit. Maecenas ultricies malesuada sapien eget tempus. Phasellus eget malesuada neque.</p>
+									</section>
+									<section id="schedule">
+										<div class="schedule container">
+											<h1>Schedule</h1>
+											<table>
+												<tr>
+													<th>Time</th>
+													<th>Monday</th>
+													<th>Tuesday</th>
+													<th>Wednesday</th>
+													<th>Thursday</th>
+													<th>Friday</th>
+												</tr>
+												<tr>
+													<td>09:00 - 11:00</td>
+													<td>Communications 1</td>
+													<td>Client Services</td>
+													<td>Special Collections</td>
+													<td>Directed Research Seminar</td>
+													<td>Client Services</td>
+												</tr>
+												<tr>
+													<td>11:00 - 12:30</td>
+													<td>Reference</td>
+													<td>Internet App</td>
+													<td>Library Software</td>
+													<td>French</td>
+													<td>Reference</td>
+												</tr>
+												<tr>
+													<td>14:00 - 15:00</td>
+													<td>Acquisitions</td>
+													<td>General Elective</td>
+													<td>Marketing</td>
+													<td>Emerging Library Tech</td>
+													<td>Library Software</td>
+												</tr>
+												<tr>
+													<td>15:30 - 17:30</td>
+													<td>French</td>
+													<td>French</td>
+													<td>Acquistions</td>
+													<td>Subject Analysis</td>
+													<td>Internet App</td>
+												</tr>
+											</table>
