--- a/lib2024/final/index.html
+++ b/lib2024/final/index.html
@@ -26,15 +26,18 @@
 							</header>
 							<main class="main clearfix" id="main">
 								<article class="main-site container">
+									
 									<section id="about">
-										<h1>About</h1>
+										<h2>About</h2>
+										<img src="img/girlsontruck.jpg" alt="Girls on Truck" class="right">
 										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae ligula placerat, volutpat odio in, pharetra velit. Praesent gravida gravida diam. Etiam iaculis varius sodales. Mauris justo lorem, tincidunt id arcu eu, semper vehicula sapien. Quisque id nibh ut turpis posuere placerat non nec velit. Fusce laoreet maximus hendrerit. Fusce id fringilla orci.</p>
 										<p>
 										Etiam elementum tortor vitae faucibus scelerisque. Sed non odio at odio pulvinar facilisis. Nullam a neque cursus massa consequat interdum. Praesent ac eros vitae arcu efficitur tincidunt. Aliquam dolor dui, congue vitae placerat a, sodales in mi. Proin feugiat interdum dui in hendrerit. Maecenas ultricies malesuada sapien eget tempus. Phasellus eget malesuada neque.</p>
+											
 									</section>
 									<section id="schedule">
 										<div class="schedule container">
-											<h1>Schedule</h1>
+											<h2>Schedule</h2>
 											<table>
 												<tr>
 													<th>Time</th>
@@ -77,3 +80,7 @@
 													<td>Internet App</td>
 												</tr>
 											</table>
+										</div>
+									</section>
+								</article>
+							</main>
