--- a/lib2024/final/index.html
+++ b/lib2024/final/index.html
@@ -33,7 +33,7 @@
 										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae ligula placerat, volutpat odio in, pharetra velit. Praesent gravida gravida diam. Etiam iaculis varius sodales. Mauris justo lorem, tincidunt id arcu eu, semper vehicula sapien. Quisque id nibh ut turpis posuere placerat non nec velit. Fusce laoreet maximus hendrerit. Fusce id fringilla orci.</p>
 										<p>
 										Etiam elementum tortor vitae faucibus scelerisque. Sed non odio at odio pulvinar facilisis. Nullam a neque cursus massa consequat interdum. Praesent ac eros vitae arcu efficitur tincidunt. Aliquam dolor dui, congue vitae placerat a, sodales in mi. Proin feugiat interdum dui in hendrerit. Maecenas ultricies malesuada sapien eget tempus. Phasellus eget malesuada neque.</p>
-											
+										
 									</section>
 									<section id="schedule">
 										<div class="schedule container">
@@ -83,4 +83,60 @@
 										</div>
 									</section>
 								</article>
+								<article class="form-value-transfer clearfix">
+									<h2>Edit Profile</h2>
+									<form id="form" action="submit.php" method="post">
+										<p>
+											<label for="name">Name:</label>
+											<input type="text" name="name" id="name" required="" placeholder="First Name Last Name">
+										</p>
+										<p>
+											<label for="email">Email:</label>
+											<input type="email" required name="email" id="email" placeholder="johndoe@gmail.com">
+										</p>
+										<p>
+											<label for="address">Address</label>
+											<input type="text" name="address" id="address" required="" placeholder="123 Elm Street">
+										</p>
+										<p>
+											<label for="city">City</label>
+											<input type="text" name="city" id="city" required="" placeholder="Ottawa">
+										</p>
+											<p>
+											<label for="province">Province</label>		
+											<select id="province" name="province">
+												<!-- <option value="none">Select Province</option> -->
+												<option value="AB">Alberta</option>
+												<option value="BC">British Columbia</option>
+												<option value="MB">Manitoba</option>
+												<option value="NB">New Brunswick</option>
+												<option value="NL">Newfoundland and Labrador</option>
+												<option value="NS">Nova Scotia</option>
+												<option value="ON">Ontario</option>
+												<option value="PE">Prince Edward Island</option>
+												<option value="QC">Quebec</option>
+												<option value="SK">Saskatchewan</option>
+												<option value="NT">Northwest Territories</option>
+												<option value="NU">Nunavut</option>
+												<option value="YT">Yukon</option>
+											</select>
+										</p>
+										<p>
+											<label>Postal Code</label>
+											<input type="text" required="" pattern="[A-Za-z][0-9][A-Za-z] [0-9][A-Za-z][0-9]" value="" name="pc" id="pc" placeholder="A0A 0A0">
+										</p>
+										<button type="submit">Submit</button>
+									</form>
+								</article>
+									<aside class="profile-card clearfix">
+									<div id="results">
+										<h2>Profile Info</h2>
+										<p><span id="name_result"></span></p>
+										<p><a href="#" id="email_result"></a></p>
+										<p><span id="address_result"></span></p>
+										<p><span id="city_result"></span></p>
+										<p><span id="province_result"></span>
+										<p><span id="pc_result"></span></p>	
+									</div>
+								</aside>
 							</main>
