--- a/lib2024/final/index.html
+++ b/lib2024/final/index.html
@@ -5,15 +5,17 @@
 		<meta name="viewport" content="width=device-width">
 		<title>Final</title>
 		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<!-- This link is for my google font that relates to my CSS -->
 		<link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" rel="stylesheet">
+		<!-- Link to my style sheet -->
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<script src="https://kit.fontawesome.com/d4dca06be3.js" crossorigin="anonymous"></script>
-		<!-- Get your code at fontawesome.com!! -->
 	</head>
 	<body>
+		<!-- This will be for my logo -->
 		<header class="site-header clearfix" id="site-header">
 			<h1 class="logo">MY LOGO</h1>
 			<nav class="main-nav container desktop-nav">
+				<!-- My main navigation bar -->
 				<ul class="main-nav clearfix">
 					<li>
 						<a href="home.html">HOME</a>
@@ -32,9 +34,9 @@
 					</li>
 				</ul>
 			</nav>
-		<!-- 	<div class="ham"></div> -->
+			<!-- <div class="ham"></div> -->
 			<!-- mobile navigation start -->
-		<!-- 	<div class="mobile-nav-container clearfix">
+			<!-- <div class="mobile-nav-container clearfix">
 				<nav class="main-nav-container mobile-nav">
 					<ul class="main-nav">
 						<li>
@@ -62,19 +64,22 @@
 			</div> -->
 		</header>
 		<main class="main clearfix" id="main">
+			<!-- Main text article -->
 			<article class="main-site container">
 				<h2>ABOUT</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae ligula placerat, volutpat odio in, pharetra velit. Praesent gravida gravida diam. Etiam iaculis varius sodales. Mauris justo lorem, tincidunt id arcu eu, semper vehicula sapien. Quisque id nibh ut turpis posuere placerat non nec velit. Fusce laoreet maximus hendrerit. Fusce id fringilla orci.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae ligula placerat, volutpat odio in, pharetra velit. Praesent gravida gravida diam. Etiam iaculis varius sodales. Mauris justo lorem, tincidunt id arcu eu, semper vehicula sapien. Quisque id nibh ut turpis posuere placerat non nec velit. Fusce laoreet maximus hendrerit. Fusce id fringilla orci.</p><br>
 				<p>
 				Etiam elementum tortor vitae faucibus scelerisque. Sed non odio at odio pulvinar facilisis. Nullam a neque cursus massa consequat interdum. Praesent ac eros vitae arcu efficitur tincidunt. Aliquam dolor dui, congue vitae placerat a, sodales in mi. Proin feugiat interdum dui in hendrerit. Maecenas ultricies malesuada sapien eget tempus. Phasellus eget malesuada neque.</p>
+				<!-- Image to the side of the article -->
+				</article>
 				<div class="img">
 					<img src="img/girlsontruck.jpg" alt="Girls Sitting on Truck" class="right">
-				</div>
-				
-			</article>
+				</div>	
+			
 			<section id="schedule">
 				<div class="schedule container">
 					<h2>SCHEDULE</h2>
+					<!-- This will be for my table -->
 					<table>
 						<tr>
 							<th>TIME</th>
@@ -119,6 +124,7 @@
 					</table>
 				</div>
 			</section>
+			<!-- This code will be for my forms for clients to input information -->
 			<article class="form-value-transfer clearfix">
 				<h2>EDIT PROFILE</h2>
 				<form id="form" action="submit.php" method="post">
@@ -141,7 +147,7 @@
 					<p>
 						<label for="province">Province</label>
 						<select id="province" name="province">
-							<!-- <option value="none">Select Province</option> -->
+						    <!-- Drop down bar options -->
 							<option value="AB">Alberta</option>
 							<option value="BC">British Columbia</option>
 							<option value="MB">Manitoba</option>
@@ -166,7 +172,7 @@
 			</article>
 			<aside class="profile-card-container clearfix">
 				<div id="card">
-					
+					<!-- Profile card code -->
 					<h2>PROFILE INFO</h2>
 					<i class="fas fa-user"></i>
 					<p><span id="name_result"></span></p>
@@ -223,8 +229,10 @@
 				<p>Nepean, ON K2G 1V8</p>
 				<p>Canada</p>
 			</section>
-			
 		</footer>
+		<script type="text/javascript" src="scripts/script.js"></script>
+		<!-- Get your code at fontawesome.com!! -->
+		<script src="https://kit.fontawesome.com/d4dca06be3.js" crossorigin="anonymous"></script>
 		<!-- Created by Krystal Sobhie -->
 	</body>
 </html>
