--- a/lib2024/final/index.html
+++ b/lib2024/final/index.html
@@ -189,7 +189,7 @@
 						
 				</div> -->
 				<div class="card">
-					<i class="fas fa-user-circle"></i>
+					<i class="fas fa-user-alt"></i>
 					<h2>John Doe</h2>
 					<p class="bio">JohnDoe@algonquincollege.com</p>
 					<p>1385 Woodroffe Ave, Nepean</p>
