--- a/lib2024/final/index.html
+++ b/lib2024/final/index.html
@@ -7,10 +7,9 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 		<!-- This link is for my google font that relates to my CSS -->
-		<!-- <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" rel="stylesheet"> -->
 		<!-- Link to my style sheet -->
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<link rel="stylesheet" type="text/css" href="fonts/fonts.css">
+		<link rel="stylesheet" type="text/css" href="css/fonts.css">
 	</head>
 	<body>
 		<!-- This will be for my logo -->
