--- a/lib2024/final/sss.html
+++ b/lib2024/final/sss.html
@@ -10,7 +10,7 @@
 		</header><main>
 		<h3>Target Screen:</h3>
 		<p>&nbsp;Desktop</p>
-		<h4>Prototype Image Link: <img src="img/webpage-mock-up.jpg" alt="Prototype Image Link" style="width: 100px;height: 125px"></h4>
+		<h4>Prototype Image Link: <img src="img/final-mockup.jpg" alt="Prototype Image Link" style="width: 100px;height: 125px"></h4>
 		<section>
 			<h3>Dimensions:</h3>
 			<table>
@@ -39,46 +39,46 @@
 					</tr>
 					<!-- This is the dimension of my main content -->
 					<tr>
+						<td>Article</td>
+						<td>70%</td>
+						<td>Auto</td>
 						<td>Main</td>
-						<td>65%</td>
-						<td>400px</td>
-						<td>Page</td>
 					</tr>
 					<!-- These are the dimensions for my article/image gallery  -->
 					<tr>
-						<td>Article</td>
+						<td>Table</td>
 						<td>100%</td>
-						<td>210px</td>
+						<td>Auto</td>
 						<td>Main</td>
 					</tr>
 					<!-- These are the dimensions of my aside -->
 					<tr>
+						<td>Article</td>
+						<td>50%</td>
+						<td>Auto</td>
+						<td>Main</td>
+					</tr>
+					<tr>
 						<td>Aside</td>
-						<td>35%</td>
-						<td>375px</td>
+						<td>50%</td>
+						<td>Auto</td>
 						<td>Main</td>
 					</tr>
 					<!-- These are the dimensions for my footer -->
 					<tr>
 						<td>Footer</td>
 						<td>100%</td>
-						<td>112px</td>
+						<td>Auto</td>
 						<td>Page</td>
 					</tr>
 					<tr>
-						<!-- my aside image is slightly larger than my image gallery images -->
+						<!-- The Image beside my Article -->
 						<td>Image</td>
-						<td>284px</td>
-						<td>214px</td>
-						<td>Aside</td>
+						<td>326px</td>
+						<td>231px</td>
+						<td>Main</td>
 					</tr>
 					<tr>
-						<!-- my image gallery images -->
-						<td>Image</td>
-						<td>185px</td>
-						<td>135px</td>
-						<td>Article</td>
-					</tr>
 				</tbody>
 			</table>
 		</section>
@@ -106,30 +106,29 @@
 						<td>1</td>
 					</tr>
 					<tr>
-						<!-- background color  for my header and footer -->
-						<td>Green</td>
-						<td>Background</td>
+						<td>Seafoam Green</td>
+						<td>Header Text</td>
 						<td>Primary</td>
-						<td>#7cc576</td>
-						<td>RGB(124,197,118)</td>
+						<td>#72a9ae</td>
+						<td>RGB(114,169,174)</td>
 						<td>1</td>
 					</tr>
 					<tr>
 						<!-- color for my nav bar -->
-						<td>Blue</td>
+						<td>Seafoam Green</td>
+						<td>Background</td>
 						<td>Navigation</td>
-						<td>Accent</td>
-						<td>#6dcff6</td>
-						<td>RGB(109,207,246)</td>
+						<td>#72a9ae</td>
+						<td>RGB(114,168,174)</td>
 						<td>1</td>
 					</tr>
 					<tr>
-						<!-- background color prior to background image -->
-						<td>BG White</td>
+						<!-- Footer Color -->
+						<td>Dark Grey</td>
 						<td>Background</td>
-						<td>Primary</td>
-						<td>#ffffff</td>
-						<td>RGB(255,255,255)</td>
+						<td>Footer</td>
+						<td>#454545</td>
+						<td>RGB(69,69,69)</td>
 						<td>1</td>
 					</tr>
 				</tbody>
@@ -149,16 +148,16 @@
 				<tbody>
 					<!-- These are the fonts I used for my assg -->
 					<tr>
-						<td>Open Sans</td>
+						<td>Eurocine</td>
 						<td>Body Text</td>
-						<td>16px</td>
+						<td>1rem</td>
 						<td>normal</td>
 					</tr>
 					<tr>
 						<td>Noto Serif</td>
 						<td>Headers</td>
 						<td>Auto</td>
-						<td>normal</td>
+						<td>700</td>
 					</tr>
 				</tbody>
 			</table>
@@ -167,16 +166,16 @@
 			<h3>URLs:</h3>
 			<nav>
 				<ul>
-					<li>Open-Sans:&nbsp;<a href="https://fonts.google.com/specimen/Open+Sans" title="Open+Sans" target="blank">https://fonts.google.com/specimen/Open+Sans</a></li>
-					<li>Noto Sans JP:&nbsp;<a href="https://fonts.google.com/specimen/Noto+Sans+JP" title="Noto+Sans JP" target="blank">'https://fonts.google.com/specimen/Noto+Sans+JP'</a></li>
+					<li>Open-Sans:&nbsp;<a href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" title="Dela+Gothic+One" target="blank">'https://fonts.google.com/specimen/Dela+Gothic+One'</a></li>
+					<li>Eurocine:&nbsp;<a href="/fonts/Eurocine-Regular.otf" target="blank">"/fonts/Eurocine-Regular.otf"</a></li>
 				</ul>
 			</nav></section>
 			<section>
 				<h3>Background Images:</h3>
 				<ul>
 					<!-- my background image -->
-					<li>URL:&nbsp;<a href="https://www.toptal.com/designers/subtlepatterns/watercolor-pattern/" title="watercolor-pattern" target="blank">https://www.toptal.com/designers/subtlepatterns/watercolor-pattern/</a></li>
-					<li>Style: Watercolor Pattern</li>
+					<li>URL:&nbsp;<a href="https://www.toptal.com/designers/subtlepatterns/triangle-mosaic-pattern/"title="triangle-mosaic" target="blank">https://www.toptal.com/designers/subtlepatterns/triangle-mosaic-pattern/</a></li>
+					<li>Style: Triangle Mosaic</li>
 				</ul>
 			</section>
 		</main>
