--- a/lib2024/final/index.html
+++ b/lib2024/final/index.html
@@ -198,7 +198,7 @@
 					,Nepean<span id="city_result"></span></p>
 					<p>ON<span id="province_result"></span>
 					K2G 1V8<span id="pc_result"></span></p>
-					<i class="fas fa-envelope"></i>
+					<i class="far fa-envelope"></i>
 					
 				</div>
 			</aside>
