--- a/lib2024/final/sss.html
+++ b/lib2024/final/sss.html
@@ -34,7 +34,7 @@
 					<tr>
 						<td>Header</td>
 						<td>100%</td>
-						<td>230px</td>
+						<td>Auto</td>
 						<td>Page</td>
 					</tr>
 					<!-- This is the dimension of my main content -->
