--- a/lib2024/final/index.html
+++ b/lib2024/final/index.html
@@ -48,7 +48,7 @@
 				<h2 class="about">ABOUT</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae ligula placerat, volutpat odio in, pharetra velit. Praesent gravida gravida diam. Etiam iaculis varius sodales. Mauris justo lorem, tincidunt id arcu eu, semper vehicula sapien. Quisque id nibh ut turpis posuere placerat non nec velit. Fusce laoreet maximus hendrerit. Fusce id fringilla orci.Vestibulum nec luctus metus, et scelerisque lorem. Fusce imperdiet nisl et massa cursus efficitur a quis mi. Pellentesque nec massa at erat consequat congue. Sed ut nibh tempus eros lobortis vulputate convallis ut tortor.</p>
 				<br>
-				<p> Etiam elementum tortor vitae faucibus scelerisque. Sed non odio at odio pulvinar facilisis. Nullam a neque cursus massa consequat interdum. Praesent ac eros vitae arcu efficitur tincidunt. Aliquam dolor dui, congue vitae placerat a, sodales in mi. Proin feugiat interdum dui in hendrerit. Maecenas ultricies malesuada sapien eget tempus. Phasellus eget malesuada neque. Mauris nec mauris id nibh molestie lobortis a vel erat. Morbi quis pellentesque leo. Sed at lorem lacinia, interdum nisl id, dignissim justo.</p>
+				<p> Etiam elementum tortor vitae faucibus scelerisque. Sed non odio at odio pulvinar facilisis. Nullam a neque cursus massa consequat interdum. Praesent ac eros vitae arcu efficitur tincidunt. Aliquam dolor dui, congue vitae placerat a, sodales in mi. Proin feugiat interdum dui in hendrerit. Maecenas ultricies malesuada sapien eget tempus. Phasellus eget malesuada neque. Mauris nec mauris id nibh molestie lobortis a vel erat. Morbi quis pellentesque leo.</p>
 			</section>
 			<!-- Image to the side of the article -->
 			<div class="img" id="image"> <img src="img/girlsontruck.jpg" alt="Girls Sitting on Truck" class="right"> </div>
@@ -56,7 +56,7 @@
 		</article>
 		<section class="schedule clearfix" id="schedule">
 			<div class="schedule-container">
-				<h2 class="schedule">SCHEDULE</h2>
+				<h2 class="schedule-header">SCHEDULE</h2>
 				<!-- This will be for my table -->
 				<table class="schedule">
 					<tr>
@@ -148,12 +148,12 @@
 		<aside class="profile-card-container clearfix">
 			<h2 class="profile-info">PROFILE INFO</h2>
 			<div id="results"> <i class="fas fa-user-alt"></i>
-				<p>John Doe<span id="name_result"></span></p>
-				<p>JohnDoe@algonquincollege.com
+				<p class="removeMe">John Doe<span id="name_result"></span></p>
+				<p class="removeMe">JohnDoe@algonquincollege.com
 					<a href="#" id="email_result"></a>
 				</p>
-				<p>1385 Woodroffe Ave<span id="address_result"></span> ,Nepean<span id="city_result"></span></p>
-				<p>ON<span id="province_result"></span> K2G 1V8<span id="pc_result"></span></p> <i class="far fa-envelope"></i> </div>
+				<p class="removeMe">1385 Woodroffe Ave<span id="address_result"></span> ,Nepean<span id="city_result"></span></p>
+				<p class="removeMe">ON<span id="province_result"></span> K2G 1V8<span id="pc_result"></span></p> <i class="far fa-envelope"></i> </div>
 		</aside>
 	</main>
 	<!-- Footer start -->
