--- a/lib2024/final/sss.html
+++ b/lib2024/final/sss.html
@@ -166,8 +166,8 @@
 			<h3>URLs:</h3>
 			<nav>
 				<ul>
-					<li>Open-Sans:&nbsp;<a href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" title="Dela+Gothic+One" target="blank">'https://fonts.google.com/specimen/Dela+Gothic+One'</a></li>
-					<li>Eurocine:&nbsp;<a href="/fonts/Eurocine-Regular.otf" target="blank">"/fonts/Eurocine-Regular.otf"</a></li>
+					<li>Dela Gothic One:&nbsp;<a href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" title="Dela+Gothic+One" target="blank">'https://fonts.google.com/specimen/Dela+Gothic+One'</a></li>
+					<li>Bitstream Vera Sans:&nbsp;<a href="/fonts/bitstream_vera_sans/Vera-webfont.woff" target="blank">"/fonts/bitstream_vera_sans/Vera-webfont.woff"</a></li>
 				</ul>
 			</nav></section>
 			<section>
