--- a/lib2024/final/index.html
+++ b/lib2024/final/index.html
@@ -1,37 +1,24 @@
 <!DOCTYPE html>
 <html lang="en-ca">
-
-<head>
-	<title>Final</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-	<!-- This link is for my google font that relates to my CSS -->
-	<!-- Link to my style sheet -->
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/fonts.css"> </head>
-
-<body>
-	<div class="overlay-container"> </div>
-	<!-- This will be for my logo -->
-	<header class="site-header clearfix" id="site-header">
-		<h1 class="logo">MY LOGO</h1>
-		<nav class="main-nav desktop-nav">
-			<!-- My main navigation bar -->
-			<ul class="main-nav clearfix">
-				<li> <a href="home.html">HOME</a> </li>
-				<li> <a href="about.html">ABOUT</a> </li>
-				<li> <a href="schedule.html">SCHEDULE</a> </li>
-				<li> <a href="portfolio.html">PORTFOLIO</a> </li>
-				<li> <a href="contact.html">CONTACT</a> </li>
-			</ul>
-		</nav>
-		<div class="ham"></div>
-		<!-- mobile navigation start -->
-		<div class="mobile-nav-container clearfix">
-			<nav class="main-nav-container mobile-nav">
-				<ul class="main-nav">
+	<head>
+		<title>Final</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+		<!-- This link is for my google font that relates to my CSS -->
+		<!-- Link to my style sheet -->
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="css/fonts.css">
+	</head>
+	<body>
+		<div class="overlay-container"> </div>
+		<!-- This will be for my logo -->
+		<header class="site-header clearfix" id="site-header">
+			<h1 class="logo">MY LOGO</h1>
+			<nav class="main-nav desktop-nav">
+				<!-- My main navigation bar -->
+				<ul class="main-nav clearfix">
 					<li> <a href="home.html">HOME</a> </li>
 					<li> <a href="about.html">ABOUT</a> </li>
 					<li> <a href="schedule.html">SCHEDULE</a> </li>
@@ -39,159 +26,169 @@
 					<li> <a href="contact.html">CONTACT</a> </li>
 				</ul>
 			</nav>
-		</div>
-	</header>
-	<main class="main clearfix" id="main">
-		<!-- Main text article -->
-		<article class="main-site content clearfix">
-			<section class="main-content">
-				<h2 class="about">ABOUT</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae ligula placerat, volutpat odio in, pharetra velit. Praesent gravida gravida diam. Etiam iaculis varius sodales. Mauris justo lorem, tincidunt id arcu eu, semper vehicula sapien. Quisque id nibh ut turpis posuere placerat non nec velit. Fusce laoreet maximus hendrerit. Fusce id fringilla orci.Vestibulum nec luctus metus, et scelerisque lorem. Fusce imperdiet nisl et massa cursus efficitur a quis mi. Pellentesque nec massa at erat consequat congue. Sed ut nibh tempus eros lobortis vulputate convallis ut tortor.</p>
-				<br>
-				<p> Etiam elementum tortor vitae faucibus scelerisque. Sed non odio at odio pulvinar facilisis. Nullam a neque cursus massa consequat interdum. Praesent ac eros vitae arcu efficitur tincidunt. Aliquam dolor dui, congue vitae placerat a, sodales in mi. Proin feugiat interdum dui in hendrerit. Maecenas ultricies malesuada sapien eget tempus. Phasellus eget malesuada neque. Mauris nec mauris id nibh molestie lobortis a vel erat. Morbi quis pellentesque leo.</p>
-			</section>
-			<!-- Image to the side of the article -->
-			<div class="img" id="image"> <img src="img/girlsontruck.jpg" alt="Girls Sitting on Truck" class="right"> </div>
-
-		</article>
-		<section class="schedule clearfix" id="schedule">
-			<div class="schedule-container">
-				<h2 class="schedule-header">SCHEDULE</h2>
-				<!-- This will be for my table -->
-				<table class="schedule">
-					<tr>
-						<th>TIME</th>
-						<th>MONDAY</th>
-						<th>TUESDAY</th>
-						<th>WEDNESDAY</th>
-						<th>THURSDAY</th>
-						<th>FRIDAY</th>
-					</tr>
-					<tr>
-						<td>09:00 - 11:00</td>
-						<td>Communications 1</td>
-						<td>Client Services</td>
-						<td>Special Collections</td>
-						<td>Directed Research Seminar</td>
-						<td>Client Services</td>
-					</tr>
-					<tr>
-						<td>11:00 - 12:30</td>
-						<td>Reference</td>
-						<td>Internet App</td>
-						<td>Library Software</td>
-						<td>French</td>
-						<td>Reference</td>
-					</tr>
-					<tr>
-						<td>14:00 - 15:00</td>
-						<td>Acquisitions</td>
-						<td>General Elective</td>
-						<td>Marketing</td>
-						<td>Emerging Library Tech</td>
-						<td>Library Software</td>
-					</tr>
-					<tr>
-						<td>15:30 - 17:30</td>
-						<td>French</td>
-						<td>French</td>
-						<td>Acquistions</td>
-						<td>Subject Analysis</td>
-						<td>Internet App</td>
-					</tr>
-				</table>
-			</div>
-		</section>
-		<!-- This code will be for my forms for clients to input information -->
-		<div class="overlay-container loader-container">
-			<div class="loader"></div>
-		</div>
-		<section class="form-value-transfer clearfix">
-			<h2 class="profile">EDIT PROFILE</h2>
-			<form id="form" action="submit.php" method="post">
-				<label for="name">Name:</label>
-				<input type="text" name="name" id="name" required="" placeholder="First Name Last Name">
-				<br/>
-				<label for="email">Email:</label>
-				<input type="email" required name="email" id="email" placeholder="johndoe@gmail.com">
-				<br/>
-				<label for="address">Address</label>
-				<input type="text" name="address" id="address" required="" placeholder="123 Elm Street">
-				<br/>
-				<label for="city">City</label>
-				<input type="text" name="city" id="city" required="" placeholder="Ottawa">
-				<br/>
-				<label for="province">Province</label>
-				<select id="province" name="province">
-					<!-- Drop down bar options -->
-					<option value="AB">Alberta</option>
-					<option value="BC">British Columbia</option>
-					<option value="MB">Manitoba</option>
-					<option value="NB">New Brunswick</option>
-					<option value="NL">Newfoundland and Labrador</option>
-					<option value="NS">Nova Scotia</option>
-					<option value="ON">Ontario</option>
-					<option value="PE">Prince Edward Island</option>
-					<option value="QC">Quebec</option>
-					<option value="SK">Saskatchewan</option>
-					<option value="NT">Northwest Territories</option>
-					<option value="NU">Nunavut</option>
-					<option value="YT">Yukon</option>
-				</select>
-				<br/>
-				<label for="pc">Postal Code</label>
-				<input type="text" required="" pattern="[A-Za-z][0-9][A-Za-z] [0-9][A-Za-z][0-9]" value="" name="pc" id="pc" placeholder="A0A 0A0">
-				<br/>
-				<button type="submit">SUBMIT</button>
-			</form>
-		</section>
-		<aside class="profile-card-container clearfix">
-			<h2 class="profile-info">PROFILE INFO</h2>
-			<div id="results"> <i class="fas fa-user-alt"></i>
-				<p class="removeMe">John Doe<span id="name_result"></span></p>
-				<p class="removeMe">JohnDoe@algonquincollege.com
-					<a href="#" id="email_result"></a>
-				</p>
-				<p class="removeMe">1385 Woodroffe Ave<span id="address_result"></span> ,Nepean<span id="city_result"></span></p>
-				<p class="removeMe">ON<span id="province_result"></span> K2G 1V8<span id="pc_result"></span></p> <i class="far fa-envelope"></i> </div>
-		</aside>
-	</main>
-	<!-- Footer start -->
-	<footer class="footer" id="footer">
-		<div class="container">
-			<div class="row">
-				<div class="footer-col">
-					<h4>QUICK LINKS</h4>
-					<ul>
-						<li> <a href="schedule.html">SCHEDULE</a> </li>
+			<div class="ham"></div>
+			<!-- mobile navigation start -->
+			<div class="mobile-nav-container clearfix">
+				<nav class="main-nav-container mobile-nav">
+					<ul class="main-nav">
+						<li> <a href="home.html">HOME</a> </li>
 						<li> <a href="about.html">ABOUT</a> </li>
+						<li> <a href="schedule.html">SCHEDULE</a> </li>
 						<li> <a href="portfolio.html">PORTFOLIO</a> </li>
 						<li> <a href="contact.html">CONTACT</a> </li>
 					</ul>
+				</nav>
+			</div>
+		</header>
+		<main class="main clearfix" id="main">
+			<!-- Main text article -->
+			<article class="main-site content clearfix">
+				<section class="main-content">
+					<h2 class="about">ABOUT</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae ligula placerat, volutpat odio in, pharetra velit. Praesent gravida gravida diam. Etiam iaculis varius sodales. Mauris justo lorem, tincidunt id arcu eu, semper vehicula sapien. Quisque id nibh ut turpis posuere placerat non nec velit. Fusce laoreet maximus hendrerit. Fusce id fringilla orci.Vestibulum nec luctus metus, et scelerisque lorem. Fusce imperdiet nisl et massa cursus efficitur a quis mi. Pellentesque nec massa at erat consequat congue. Sed ut nibh tempus eros lobortis vulputate convallis ut tortor.</p>
+					<br>
+					<p> Etiam elementum tortor vitae faucibus scelerisque. Sed non odio at odio pulvinar facilisis. Nullam a neque cursus massa consequat interdum. Praesent ac eros vitae arcu efficitur tincidunt. Aliquam dolor dui, congue vitae placerat a, sodales in mi. Proin feugiat interdum dui in hendrerit. Maecenas ultricies malesuada sapien eget tempus. Phasellus eget malesuada neque. Mauris nec mauris id nibh molestie lobortis a vel erat. Morbi quis pellentesque leo.</p>
+				</section>
+				<!-- Image to the side of the article -->
+				<div class="img" id="image"> <img src="img/girlsontruck.jpg" alt="Girls Sitting on Truck" class="right"> </div>
+			</article>
+			<section class="schedule clearfix" id="schedule">
+				<div class="schedule-container">
+					<h2 class="schedule-header">SCHEDULE</h2>
+					<!-- This will be for my table -->
+					<table class="schedule">
+						<tr>
+							<th>TIME</th>
+							<th>MONDAY</th>
+							<th>TUESDAY</th>
+							<th>WEDNESDAY</th>
+							<th>THURSDAY</th>
+							<th>FRIDAY</th>
+						</tr>
+						<tr>
+							<td>09:00 - 11:00</td>
+							<td>Communications 1</td>
+							<td>Client Services</td>
+							<td>Special Collections</td>
+							<td>Directed Research Seminar</td>
+							<td>Client Services</td>
+						</tr>
+						<tr>
+							<td>11:00 - 12:30</td>
+							<td>Reference</td>
+							<td>Internet App</td>
+							<td>Library Software</td>
+							<td>French</td>
+							<td>Reference</td>
+						</tr>
+						<tr>
+							<td>14:00 - 15:00</td>
+							<td>Acquisitions</td>
+							<td>General Elective</td>
+							<td>Marketing</td>
+							<td>Emerging Library Tech</td>
+							<td>Library Software</td>
+						</tr>
+						<tr>
+							<td>15:30 - 17:30</td>
+							<td>French</td>
+							<td>French</td>
+							<td>Acquistions</td>
+							<td>Subject Analysis</td>
+							<td>Internet App</td>
+						</tr>
+					</table>
 				</div>
-				<div class="footer-col">
-					<h4 class="social-header">FOLLOW US</h4>
-					<div class="social-links">
-						<ul>
-							<li> <a href="http://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a> </li>
-							<li> <a href="http://youtube.com" target="_blank"><i class="fab fa-youtube"></i></a> </li>
-							<li> <a href="http://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a> </li>
-						</ul>
+			</section>
+			<!-- This code will be for my forms for clients to input information -->
+			<div class="overlay-container loader-container">
+				<div class="loader"></div>
+			</div>
+			<section class="form-value-transfer clearfix">
+				<h2 class="profile">EDIT PROFILE</h2>
+				<form id="form" action="submit.php" method="post">
+					<label for="name">Name:</label>
+					<input type="text" name="name" id="name" required="" placeholder="First Name Last Name">
+					<br/>
+					<label for="email">Email:</label>
+					<input type="email" required name="email" id="email" placeholder="johndoe@gmail.com">
+					<br/>
+					<label for="address">Address</label>
+					<input type="text" name="address" id="address" required="" placeholder="123 Elm Street">
+					<br/>
+					<label for="city">City</label>
+					<input type="text" name="city" id="city" required="" placeholder="Ottawa">
+					<br/>
+					<label for="province">Province</label>
+					<select id="province" name="province">
+						<!-- Drop down bar options -->
+						<option value="AB">Alberta</option>
+						<option value="BC">British Columbia</option>
+						<option value="MB">Manitoba</option>
+						<option value="NB">New Brunswick</option>
+						<option value="NL">Newfoundland and Labrador</option>
+						<option value="NS">Nova Scotia</option>
+						<option value="ON">Ontario</option>
+						<option value="PE">Prince Edward Island</option>
+						<option value="QC">Quebec</option>
+						<option value="SK">Saskatchewan</option>
+						<option value="NT">Northwest Territories</option>
+						<option value="NU">Nunavut</option>
+						<option value="YT">Yukon</option>
+					</select>
+					<br/>
+					<label for="pc">Postal Code</label>
+					<input type="text" required="" pattern="[A-Za-z][0-9][A-Za-z] [0-9][A-Za-z][0-9]" value="" name="pc" id="pc" placeholder="A0A 0A0">
+					<br/>
+					<button type="submit">SUBMIT</button>
+				</form>
+			</section>
+			<aside class="profile-card-container clearfix">
+				<h2 class="profile-info">PROFILE INFO</h2>
+				<div id="results"> <i class="fas fa-user-alt"></i>
+					<p class="removeMe">John Doe<span id="name_result"></span></p>
+					<p class="removeMe">JohnDoe@algonquincollege.com
+						<a href="#" id="email_result"></a>
+					</p>
+					<p class="removeMe">1385 Woodroffe Ave<span id="address_result"></span> ,Nepean<span id="city_result"></span></p>
+					<p class="removeMe">ON<span id="province_result"></span> K2G 1V8<span id="pc_result"></span></p> <i class="far fa-envelope"></i> </div>
+				</aside>
+			</main>
+			<!-- Footer start -->
+			<footer class="footer" id="footer">
+				<div class="container">
+					<div class="row">
+						<div class="footer-col">
+							<h4>QUICK LINKS</h4>
+							<ul>
+								<li> <a href="schedule.html">SCHEDULE</a> </li>
+								<li> <a href="about.html">ABOUT</a> </li>
+								<li> <a href="portfolio.html">PORTFOLIO</a> </li>
+								<li> <a href="contact.html">CONTACT</a> </li>
+							</ul>
+						</div>
+						<div class="footer-col">
+							<h4 class="social-header">FOLLOW US</h4>
+							<div class="social-links">
+								<ul>
+									<li> <a href="http://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a> </li>
+									<li> <a href="http://youtube.com" target="_blank"><i class="fab fa-youtube"></i></a> </li>
+									<li> <a href="http://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a> </li>
+								</ul>
+							</div>
+						</div>
+						<div class="footer-col">
+							<h4>ADDRESS</h4>
+							<p>1385 Woodroffe Avenue</p>
+							<p>Nepean, ON K2G 1V8</p>
+							<p>Canada</p>
+						</div>
 					</div>
 				</div>
-				<div class="footer-col">
-					<h4>ADDRESS</h4>
-					<p>1385 Woodroffe Avenue</p>
-					<p>Nepean, ON K2G 1V8</p>
-					<p>Canada</p>
-				</div>
-			</div>
-		</div>
-	</footer>
-	<!-- JQUERY AND JAVASCRIPT LINKS -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="js/scripts.js"></script>
-	<!-- Created by Krystal Sobhie -->
-</body>
-
-</html>
+			</footer>
+			<!-- JQUERY AND JAVASCRIPT LINKS -->
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+			<script src="js/scripts.js"></script>
+			<!-- Created by Krystal Sobhie -->
+		</body>
+	</html>
