--- a/lib2024/final/sss.html
+++ b/lib2024/final/sss.html
@@ -35,7 +35,7 @@
 						<td>Header</td>
 						<td>100%</td>
 						<td>Auto</td>
-						<td>Page</td>
+						<td>Body</td>
 					</tr>
 					<!-- This is the dimension of my main content -->
 					<tr>
@@ -53,7 +53,7 @@
 					</tr>
 					<!-- These are the dimensions of my aside -->
 					<tr>
-						<td>Article</td>
+						<td>Section</td>
 						<td>50%</td>
 						<td>Auto</td>
 						<td>Main</td>
@@ -69,16 +69,15 @@
 						<td>Footer</td>
 						<td>100%</td>
 						<td>Auto</td>
-						<td>Page</td>
+						<td>Body</td>
 					</tr>
 					<tr>
 						<!-- The Image beside my Article -->
 						<td>Image</td>
 						<td>326px</td>
 						<td>231px</td>
-						<td>Main</td>
+						<td>Article</td>
 					</tr>
-					<tr>
 				</tbody>
 			</table>
 		</section>
@@ -106,7 +105,7 @@
 						<td>1</td>
 					</tr>
 					<tr>
-						<td>Seafoam Green</td>
+						<td>Turqouise</td>
 						<td>Header Text</td>
 						<td>Primary</td>
 						<td>#72a9ae</td>
@@ -115,11 +114,36 @@
 					</tr>
 					<tr>
 						<!-- color for my nav bar -->
-						<td>Seafoam Green</td>
+						<td>Turqouise</td>
 						<td>Background</td>
 						<td>Navigation</td>
 						<td>#72a9ae</td>
 						<td>RGB(114,168,174)</td>
+						<td>1</td>
+					</tr>
+					<!-- OVERLAY COLOURS -->
+					<tr>
+						<td>Pink</td>
+						<td>Overlay</td>
+						<td>Background</td>
+						<td>#FAC5BE</td>
+						<td>RGB(250,197,190)</td>
+						<td>0.73</td>
+					</tr>
+					<tr>
+						<td>Bright Pink</td>
+						<td>Loader</td>
+						<td>Border-Top</td>
+						<td>FFB5E1</td>
+						<td>RGB(255,181,225)</td>
+						<td>1</td>
+					</tr>
+					<tr>
+						<td>Dark Pink</td>
+						<td>Loader</td>
+						<td>Border</td>
+						<td>#E8A5AB</td>
+						<td>RGB(231,165,171)</td>
 						<td>1</td>
 					</tr>
 					<tr>
@@ -148,14 +172,14 @@
 				<tbody>
 					<!-- These are the fonts I used for my assg -->
 					<tr>
-						<td>Eurocine</td>
+						<td>Bitstream Vera Sans</td>
 						<td>Body Text</td>
 						<td>1rem</td>
 						<td>normal</td>
 					</tr>
 					<tr>
-						<td>Noto Serif</td>
-						<td>Headers</td>
+						<td>Dela Gothic One</td>
+						<td>Logo</td>
 						<td>Auto</td>
 						<td>700</td>
 					</tr>
@@ -174,7 +198,7 @@
 				<h3>Background Images:</h3>
 				<ul>
 					<!-- my background image -->
-					<li>URL:&nbsp;<a href="https://www.toptal.com/designers/subtlepatterns/triangle-mosaic-pattern/"title="triangle-mosaic" target="blank">https://www.toptal.com/designers/subtlepatterns/triangle-mosaic-pattern/</a></li>
+					<li>URL:&nbsp;<a href="https://www.toptal.com/designers/subtlepatterns/triangle-mosaic-pattern/" title="triangle-mosaic" target="blank">https://www.toptal.com/designers/subtlepatterns/triangle-mosaic-pattern/</a></li>
 					<li>Style: Triangle Mosaic</li>
 				</ul>
 			</section>
