--- a/lib2024/final/sss.html
+++ b/lib2024/final/sss.html
@@ -9,7 +9,7 @@
 			<h1>Title of Page</h1>
 		</header><main>
 		<h3>Target Screen:</h3>
-		<p>&nbsp;Desktop</p>
+		<p>&nbsp;Responsive, Mobile and Desktop</p>
 		<h4>Prototype Image Link: <img src="img/final-mockup.jpg" alt="Prototype Image Link" style="width: 100px;height: 125px"></h4>
 		<section>
 			<h3>Dimensions:</h3>
