--- a/lib2024/final/index.html
+++ b/lib2024/final/index.html
@@ -149,7 +149,8 @@
 					<p><span id="name_result">John Doe</span></p>
 					<p> <a href="#" id="email_result">JohnDoe@algonquincollege.com</a> </p>
 					<p><span id="address_result">1385 Woodroffe Ave</span>,<span id="city_result">Nepean</span></p>
-					<p><span id="province_result">ON</span> <span id="pc_result">K2G 1V8</span></p> <i class="far fa-envelope"></i>
+					<p><span id="province_result">ON</span> <span id="pc_result">K2G 1V8</span></p> 
+					<p> <a href="#" id="email_result_2"><i class="far fa-envelope"></i></a> </p>
 				</div>
 			</aside>
 		</main>
