--- a/lib2024/final/sss.html
+++ b/lib2024/final/sss.html
@@ -10,7 +10,7 @@
 		</header><main>
 		<h3>Target Screen:</h3>
 		<p>&nbsp;Responsive, Mobile and Desktop</p>
-		<h4>Prototype Image Link: <img src="img/final-mockup.jpg" alt="Prototype Image Link" style="width: 100px;height: 125px"></h4>
+		<h4>Prototype Image Link: <a href="img/final-mockup.jpg" target="_blank">Link</a></h4>
 		<section>
 			<h3>Dimensions:</h3>
 			<table>
@@ -74,8 +74,8 @@
 					<tr>
 						<!-- The Image beside my Article -->
 						<td>Image</td>
-						<td>326px</td>
-						<td>231px</td>
+						<td>100%</td>
+						<td>Auto</td>
 						<td>Article</td>
 					</tr>
 				</tbody>
