--- a/lib2024/final/index.html
+++ b/lib2024/final/index.html
@@ -14,7 +14,9 @@
 	<body>
 		<!-- This will be for my logo -->
 		<header class="site-header clearfix" id="site-header">
-			<h1 class="logo">MY LOGO</h1>
+			<div class="header">
+				<h1 class="logo">MY LOGO</h1>
+			</div>
 			<!-- My main navigation bar -->
 			<nav class="main-nav desktop-nav">
 				<ul class="main-nav clearfix">
@@ -149,7 +151,7 @@
 					<p><span id="name_result">John Doe</span></p>
 					<p> <a href="#" id="email_result">JohnDoe@algonquincollege.com</a> </p>
 					<p><span id="address_result">1385 Woodroffe Ave</span>,<span id="city_result">Nepean</span></p>
-					<p><span id="province_result">ON</span> <span id="pc_result">K2G 1V8</span></p> 
+					<p><span id="province_result">ON</span> <span id="pc_result">K2G 1V8</span></p>
 					<p> <a href="#" id="email_result_2"><i class="far fa-envelope"></i></a> </p>
 				</div>
 			</aside>
@@ -187,6 +189,9 @@
 						<p>Canada</p>
 					</div>
 				</div>
+			</div>
+			<div class="footer-box">
+				<p>&nbsp;</p>
 			</div>
 		</footer>
 		<!-- JQUERY AND JAVASCRIPT LINKS -->
