--- a/lib2024/final/sss.html
+++ b/lib2024/final/sss.html
@@ -113,6 +113,14 @@
 						<td>1</td>
 					</tr>
 					<tr>
+						<td>White</td>
+						<td>Header,Footer bar</td>
+						<td>Background</td>
+						<td>#ffffff</td>
+						<td>RGB(255,255,255)</td>
+						<td>1</td>
+					</tr>
+					<tr>
 						<!-- color for my nav bar -->
 						<td>Turqouise</td>
 						<td>Background</td>
